--- a/css/styles.css
+++ b/css/styles.css
@@ -37,12 +37,16 @@ body {
 
 .clickable {
   margin-bottom: 0;
+  font-size: 1.2em;
 }
 
 /*.col-mark {
   min-height: 100%;
 }*/
 
+#kill {
+  float: right;
+}
 
 .form-group{
   margin: 1em;
@@ -52,6 +56,7 @@ body {
 #recordView {
   padding: 1em;
   margin: 1em;
+  font-size: 1.2em;
 }
 
 .rec {
